// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.07);
}

.c12:active {
  background: rgba(255,255,255,0.13);
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            height="160px"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first server to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Server Access consolidates SSH access across all environments.
          </div>
        </div>
        <div
          class="c10"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c11"
              kind="primary"
              width="224px"
            >
              Add 
              server
            </button>
          </a>
          <a
            class="c12"
            href="https://goteleport.com/docs/server-access/getting-started/"
            kind="border"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            View Documentation
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c27 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c27:hover,
.c27:focus {
  background: rgba(255,255,255,0.07);
}

.c27:active {
  background: rgba(255,255,255,0.13);
}

.c27:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c21 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c28 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c33 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c31 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c31 .c20 {
  color: inherit;
}

.c31:disabled {
  color: rgba(255,255,255,0.36);
}

.c31:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c31:hover:enabled,
.c31:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c31:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c34 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c34 .c20 {
  color: inherit;
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c34:hover:enabled,
.c34:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c34:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c22 {
  box-sizing: border-box;
  display: flex;
}

.c25 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c30 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c24 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c24 > thead > tr > th,
.c24 > tbody > tr > th,
.c24 > tfoot > tr > th,
.c24 > thead > tr > td,
.c24 > tbody > tr > td,
.c24 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c24 > thead > tr > th:first-child,
.c24 > tbody > tr > th:first-child,
.c24 > tfoot > tr > th:first-child,
.c24 > thead > tr > td:first-child,
.c24 > tbody > tr > td:first-child,
.c24 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c24 > thead > tr > th:last-child,
.c24 > tbody > tr > th:last-child,
.c24 > tfoot > tr > th:last-child,
.c24 > thead > tr > td:last-child,
.c24 > tbody > tr > td:last-child,
.c24 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c24 > tbody > tr > td {
  vertical-align: middle;
}

.c24 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c24 > thead > tr > th .c20 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c24 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c24 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c24 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c29 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c26 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c26:hover {
  background-color: rgba(255,255,255,0.13);
}

.c32 .c20 {
  font-size: 20px;
}

.c32 .c20:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c11::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: rgba(255,255,255,0.13);
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
  </div>
  <div
    class="c3"
    kind="danger"
  >
    <div>
      some error message
    </div>
  </div>
  <div
    class="c4"
  >
    <form
      class="c5"
    >
      <div
        class="c6"
        width="100%"
      >
        <div
          class="c7"
          style="width: 70%;"
        >
          <div
            class="c8"
            width="100%"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
              >
                <input
                  class="c11"
                  placeholder="SEARCH..."
                  value=""
                />
                <div
                  class="c12"
                >
                  <div
                    class="c13"
                  >
                    <div
                      class="c14"
                    >
                      <label
                        class="c15"
                      >
                        <input
                          class="c16"
                          type="checkbox"
                        />
                        <div
                          class="c17 c18"
                        />
                      </label>
                      <div
                        class="c19"
                      >
                        Advanced
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="line-height: 0px;"
          >
            <span
              class="c20 c21 icon icon-info_outline "
              style="cursor: pointer; font-size: 20px;"
            />
          </div>
        </div>
        <div
          class="c22"
        >
          <div
            class="c23"
            color="text.main"
            style="text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c24"
    >
      <thead>
        <tr>
          <th>
            <a>
              Hostname
              <span
                class="c20 c21 icon icon-chevron-up "
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            fujedu
          </td>
          <td>
            172.10.1.20:3022
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c20 c28 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            facuzguv
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c20 c28 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            duzsevkig
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c20 c28 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            kuhinur
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c20 c28 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c20 c28 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c20 c28 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c25"
            >
              <div
                class="c26"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c26"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c27"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c20 c28 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c29"
    >
      <div
        class="c30"
        width="100%"
      >
        <div
          class="c22"
        >
          <button
            class="c31 c32"
            title="Previous page"
          >
            <span
              class="c20 c33 icon icon-arrow-left-circle "
              font-size="3"
            />
          </button>
          <button
            class="c34 c32"
            title="Next page"
          >
            <span
              class="c20 c33 icon icon-arrow-right-circle "
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`loaded 1`] = `
.c11 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c7:hover,
.c7:focus {
  background: #B29DFF;
}

.c7:active {
  background: #C5B6FF;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c30 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c30:hover,
.c30:focus {
  background: rgba(255,255,255,0.07);
}

.c30:active {
  background: rgba(255,255,255,0.13);
}

.c30:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c24 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c31 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c36 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c34 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c34 .c23 {
  color: inherit;
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c34:hover:enabled,
.c34:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c34:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c37 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c37 .c23 {
  color: inherit;
}

.c37:disabled {
  color: rgba(255,255,255,0.36);
}

.c37:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c37:hover:enabled,
.c37:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c37:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c25 {
  box-sizing: border-box;
  display: flex;
}

.c28 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c33 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 280px;
  display: flex;
  align-items: center;
  height: 32px;
  border: 1px solid;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.07);
  border-color: rgba(255,255,255,0.13);
}

.c5 {
  opacity: 0.75;
  font-size: 11px;
  font-weight: 500;
  padding: 0 8px;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
}

.c6 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-sizing: border-box;
  border-bottom-left-radius: unset;
  border-top-left-radius: unset;
  display: block;
  outline: none;
  width: 100%;
  height: 100%;
  box-shadow: none;
  padding-left: 8px;
  font-size: 12px;
  color: #FFFFFF;
  background-color: #222C59;
}

.c6::-ms-clear {
  display: none;
}

.c6:read-only {
  cursor: not-allowed;
}

.c6::placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c6:hover,
.c6:focus {
  background: #344179;
}

.c27 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c27 > thead > tr > th,
.c27 > tbody > tr > th,
.c27 > tfoot > tr > th,
.c27 > thead > tr > td,
.c27 > tbody > tr > td,
.c27 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c27 > thead > tr > th:first-child,
.c27 > tbody > tr > th:first-child,
.c27 > tfoot > tr > th:first-child,
.c27 > thead > tr > td:first-child,
.c27 > tbody > tr > td:first-child,
.c27 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c27 > thead > tr > th:last-child,
.c27 > tbody > tr > th:last-child,
.c27 > tfoot > tr > th:last-child,
.c27 > thead > tr > td:last-child,
.c27 > tbody > tr > td:last-child,
.c27 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c27 > tbody > tr > td {
  vertical-align: middle;
}

.c27 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c27 > thead > tr > th .c23 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c27 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c27 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c27 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c9 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c32 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c8 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c29 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c29:hover {
  background-color: rgba(255,255,255,0.13);
}

.c35 .c23 {
  font-size: 20px;
}

.c35 .c23:before {
  padding-left: 1px;
}

.c16 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c15 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c13 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c12 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c14 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c14:hover,
.c14:focus,
.c14:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c14::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c18 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c18[disabled] {
  cursor: default;
}

.c21 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c21:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c19 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c19:checked + .c20 {
  background: rgba(255,255,255,0.13);
}

.c19:checked + .c20:before {
  transform: translate(16px,-50%);
}

.c19:disabled + .c20 {
  background: #222C59;
}

.c19:disabled + .c20:before {
  background: #455a64;
}

.c17 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        width="280px"
      >
        <div
          class="c5"
        >
          SSH:
        </div>
        <input
          class="c6"
          color="text.main"
          placeholder="login@host:port"
        />
      </div>
      <a
        href="/web/discover"
        style="text-decoration: none;"
      >
        <button
          class="c7"
          kind="primary"
          title=""
          width="240px"
        >
          Add 
          server
        </button>
      </a>
    </div>
  </div>
  <div
    class="c8"
  >
    <form
      class="c9"
    >
      <div
        class="c10"
        width="100%"
      >
        <div
          class="c3"
          style="width: 70%;"
        >
          <div
            class="c11"
            width="100%"
          >
            <div
              class="c12"
            >
              <div
                class="c13"
              >
                <input
                  class="c14"
                  placeholder="SEARCH..."
                  value=""
                />
                <div
                  class="c15"
                >
                  <div
                    class="c16"
                  >
                    <div
                      class="c17"
                    >
                      <label
                        class="c18"
                      >
                        <input
                          class="c19"
                          type="checkbox"
                        />
                        <div
                          class="c20 c21"
                        />
                      </label>
                      <div
                        class="c22"
                      >
                        Advanced
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="line-height: 0px;"
          >
            <span
              class="c23 c24 icon icon-info_outline "
              style="cursor: pointer; font-size: 20px;"
            />
          </div>
        </div>
        <div
          class="c25"
        >
          <div
            class="c26"
            color="text.main"
            style="text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c27"
    >
      <thead>
        <tr>
          <th>
            <a>
              Hostname
              <span
                class="c23 c24 icon icon-chevron-up "
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            fujedu
          </td>
          <td>
            172.10.1.20:3022
          </td>
          <td>
            <div
              class="c28"
            >
              <div
                class="c29"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c29"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c30"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c23 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            facuzguv
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c28"
            >
              <div
                class="c29"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c29"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c30"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c23 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            duzsevkig
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c28"
            >
              <div
                class="c29"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c29"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c30"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c23 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            kuhinur
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c28"
            >
              <div
                class="c29"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c29"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c30"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c23 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c28"
            >
              <div
                class="c29"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c29"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c30"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c23 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c28"
            >
              <div
                class="c29"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c29"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c30"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c23 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c28"
            >
              <div
                class="c29"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c29"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c30"
              height="24px"
              kind="border"
            >
              CONNECT
              <span
                class="c23 c31 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c32"
    >
      <div
        class="c33"
        width="100%"
      >
        <div
          class="c25"
        >
          <button
            class="c34 c35"
            title="Previous page"
          >
            <span
              class="c23 c36 icon icon-arrow-left-circle "
              font-size="3"
            />
          </button>
          <button
            class="c37 c35"
            title="Next page"
          >
            <span
              class="c23 c36 icon icon-arrow-right-circle "
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: #FFFFFF;
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3"
      color="text.main"
    >
      <div
        class="c4"
      >
        No Servers Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        servers
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
